--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Publications</title>
-</head>
-<body>
+---
+layout: archive
+title: #"Research Projects"
+permalink: /publications.html
+author_profile: true
+---
 
 <div class="publications-container">
     
