--- a/_pages/research.html
+++ b/_pages/research.html
@@ -32,22 +32,34 @@ author_profile: true
     max-width: 100%;
 }
 
+.research-container h2 {
+    font-size: 1.3em;
+    font-weight: 500;
+    color: #333;
+    margin-bottom: 20px;
+}
+
 .project-entry {
-    margin-bottom: 30px;
-    padding: 20px;
+    margin-bottom: 25px;
+    padding: 15px 20px;
     background-color: #f8f9fa;
-    border-left: 4px solid #007bff;
+    border-left: 3px solid #007bff;
     border-radius: 4px;
 }
 
 .project-entry h3 {
+    font-size: 1.1em;
+    font-weight: 500;
     color: #333;
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .project-entry p {
+    font-size: 0.95em;
+    font-weight: 400;
     margin-bottom: 0;
-    line-height: 1.6;
+    line-height: 1.5;
+    color: #555;
 }
 </style>
