--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -19,7 +19,8 @@ author_profile: true
 
     <div class="publication-entry">
         <div class="citation">
-            Chunchen Xu and Xiao Ge. 2024. AI as a Child of Mother Earth: Regrounding Human-AI Interaction in Ecological Thinking. In <em>Extended Abstracts of the CHI Conference on Human Factors in Computing Systems (CHI EA ’24), May 11–16, 2024, Honolulu, HI, USA.<em> ACM, New York, NY, USA, 9 pages. https://doi.org/10.1145/3613905.3644065
+            Chunchen Xu and Xiao Ge. 2024. AI as a Child of Mother Earth: Regrounding Human-AI Interaction in Ecological Thinking. In <em>Extended Abstracts of the CHI Conference on Human Factors in Computing Systems (CHI EA ’24), May 11–16, 2024, Honolulu, HI, USA.<em> 
+                ACM, New York, NY, USA, 9 pages. https://doi.org/10.1145/3613905.3644065
             <a href="files/earthchild.pdf" target="_blank">PDF</a>
         </div>
         
