--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,7 +1,5 @@
 ---
 permalink: /
-title: "About"
-excerpt: "About me"
 author_profile: true
 redirect_from: 
   - /about/
@@ -10,8 +8,8 @@ redirect_from:
 
 <div class="about-container">
 
-I am a behavioral scientist investigating how people make decisions in complex social and economic environments. My research combines experimental methods, computational modeling, and field studies to understand the psychological mechanisms underlying human choice behavior.
-
+As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural world. 
+  
 <h2>Research Interests</h2>
 
 <div class="content-section">
@@ -27,19 +25,26 @@ I am currently leading several research initiatives that bridge laboratory and f
 <h2>Approach</h2>
 
 <div class="content-section">
-My research philosophy centers on methodological rigor combined with real-world relevance. I believe that understanding human behavior requires multiple complementary approaches: controlled laboratory experiments to isolate causal mechanisms, computational models to formalize theoretical predictions, and field studies to test external validity. This multi-method approach allows me to build robust theories while maintaining practical applicability.
+Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.
 </div>
 
-<h2>Beyond Research</h2>
+<h2>Recent News</h2>
+
+<div class="update-section">
+[8/24/25] - I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025. 
+[8/20/25] - My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
+</div>
+  
+<h2>Background</h2>
 
 <div class="content-section">
-When I'm not in the lab or analyzing data, I enjoy mentoring students and engaging with broader conversations about the role of behavioral science in addressing societal challenges. I regularly contribute to policy discussions and work with organizations to translate research insights into practical applications.
+I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor Brian S. Lowery. Since then, I have been working with Professors Hazel Rose Markus and Jeanne L. Tsai on research related to culture, creativity and climate action. 
 </div>
 
 <hr>
 
 <div class="contact-note">
-<em>I am always interested in connecting with fellow researchers, students, and practitioners working at the intersection of psychology, economics, and policy. Feel free to reach out if you'd like to discuss potential collaborations or simply share ideas about behavioral science.</em>
+<em> Please reach out if you would like to learn more about my research! </em>
 </div>
 
 </div>
@@ -83,17 +88,6 @@ h2 {
 }
 </style>
 
-As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural world. 
-
-Recent News 
-======
-[8/24/25] - I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025. 
-
-[8/20/25] - My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
-
-Background
-======
-I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. 
 
 
 
