--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,14 +13,13 @@ author_profile: true
         </div>
         
         <div class="abstract">
-            <strong>Abstract:</strong> Digital environments today often lack affordances that cultivate a sense of place and embodied being and acting. We develop a theoretical framework for embodied place-making based on people's psychological tendency to balance structure (clarity, predictability, and certainty) with unstructuredness (openness and possibility). This framework provides a unified theoretical foundation for examining continuity and discontinuity in social psychological processes and behaviors across digital, physical, and natural environments. We illustrate this framework through an original story (NewsWood) that reconceptualizes digital news reading as an experience akin to wandering through woods. We hope to inspire radical reimagining of how future digital environments can foster well-being across individuals, communities, societies, and the natural world within their interconnected relationships.
+            <strong>Abstract:</strong> Digital environments today often lack affordances that cultivate a sense of place and embodied being and acting. We develop a theoretical framework for embodied place-making based on people's psychological tendency to balance structure (clarity, predictability, and certainty) with unstructuredness (openness and possibility). This framework provides a unified theoretical foundation for examining continuity and discontinuity in social psychological processes and behaviors across digital, physical, and natural environments. We illustrate this framework through an original story (<em>NewsWood</em>) that reconceptualizes digital news reading as an experience akin to wandering through woods. We hope to inspire radical reimagining of how future digital environments can foster well-being across individuals, communities, societies, and the natural world within their interconnected relationships.
         </div>
     </div>
 
     <div class="publication-entry">
         <div class="citation">
-            Chunchen Xu and Xiao Ge. 2024. AI as a Child of Mother Earth: Regrounding Human-AI Interaction in Ecological Thinking. In <em>Extended Abstracts of the CHI Conference on Human Factors in Computing Systems (CHI EA ’24), May 11–16, 2024, Honolulu, HI, USA.<em> 
-                ACM, New York, NY, USA, 9 pages. https://doi.org/10.1145/3613905.3644065
+            Chunchen Xu and Xiao Ge. 2024. AI as a Child of Mother Earth: Regrounding Human-AI Interaction in Ecological Thinking. In <em>Extended Abstracts of the CHI Conference on Human Factors in Computing Systems (CHI EA ’24), May 11–16, 2024, Honolulu, HI, USA.</em> ACM, New York, NY, USA, 9 pages. https://doi.org/10.1145/3613905.3644065
             <a href="files/earthchild.pdf" target="_blank">PDF</a>
         </div>
         
