--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -32,9 +32,9 @@ author_profile: true
 
 <style>
 .publications-container {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 20px 40px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
 }
