--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -32,9 +32,10 @@ author_profile: true
 
 <style>
 .publications-container {
-    max-width: 1500px;
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 20px 40px;
+    padding: 20px;
+    width: 90%; /* Use 90% of available width */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
 }
