--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -32,9 +32,9 @@ author_profile: true
 
 <style>
 .publications-container {
-    max-width: 1600px;
+    max-width: 2000px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 20px 40px;
     width: 90%; /* Use 90% of available width */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
@@ -45,7 +45,7 @@ author_profile: true
 }
 
 .citation {
-    font-size: 16px;
+    font-size: 14px;
     margin-bottom: 15px;
 }
 
