--- a/_pages/about.html
+++ b/_pages/about.html
@@ -54,6 +54,7 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
 }
@@ -83,7 +84,7 @@ h2 {
     color: #495057;
     margin-top: 40px;
     margin-bottom: 20px;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 500;
 }
 </style>
