--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -34,8 +34,8 @@ author_profile: true
 .publications-container {
     max-width: 2000px;
     margin: 0 auto;
-    padding: 20px 40px;
-    width: 90%; /* Use 90% of available width */
+    padding: 20px;
+    width: 100%; /* Use 90% of available width */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
 }
