--- a/_pages/about.html
+++ b/_pages/about.html
@@ -51,14 +51,17 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
 
 <style>
 .about-container {
-    max-width: 1800px;
+    max-width: none;           /* Remove max-width limit */
+    width: 90%;               /* Use 90% of available space */
     margin: 0 auto;
-    padding: 20px;
+    margin-left: -50px;       /* Shift left towards sidebar */
+    margin-right: -20px;      /* Extend right */
+    padding: 20px 40px;       /* More horizontal padding */
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
 }
-
+  
 .content-section {
     background-color: #f8f9fa;
     padding: 15px;
