--- a/_pages/about.html
+++ b/_pages/about.html
@@ -60,6 +60,7 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
+    text-align: left; 
 }
   
 .content-section {
