--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,13 +13,15 @@ As a behavioral scientist and cultural scholar, I explore how culture influences
 <h2>Research Interests</h2>
 
 <div class="content-section">
-My work focuses on three interconnected areas that shape human decision-making. First, I examine how social context influences individual choices, exploring questions about conformity, social learning, and peer effects in environments ranging from financial markets to health behaviors. Second, I investigate decision-making under uncertainty, particularly how people process probabilistic information and manage risk in both personal and professional contexts. Third, I study the behavioral foundations of economic phenomena, using insights from psychology to better understand market behavior, policy effectiveness, and organizational dynamics.
+My current work 
+  
 </div>
 
 <h2>Current Projects</h2>
 
 <div class="content-section">
-I am currently leading several research initiatives that bridge laboratory and field settings. One line of work examines how social networks shape the spread of information and influence decision-making in online communities. Another project investigates the role of cognitive biases in financial decision-making, with implications for both individual investors and market stability. Additionally, I am collaborating with policymakers to design and evaluate behavioral interventions aimed at improving health outcomes and environmental sustainability.
+I am currently leading several research initiatives that 
+  
 </div>
 
 <h2>Approach</h2>
@@ -30,7 +32,7 @@ Methodologically, I pursue a mode of inquiry that is both empirical and imaginat
 
 <h2>Recent News</h2>
 
-<div class="update-section">
+<div class="content-section">
 [8/24/25] - I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025. 
 [8/20/25] - My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
 </div>
@@ -65,6 +67,17 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
 }
   
 .content-section {
+    max-width: none;           /* Remove max-width limit */
+    width: calc(100% - 20px);  /* Use full width minus small buffer */
+    margin: 0;                 /* Reset all margins */
+    margin-left: -30px;        /* Fine-tuned left shift */
+    margin-right: -140px;      /* Extend into right margin */
+    padding: 20px 40px;        /* Horizontal padding for readability */
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    line-height: 1.6;
+    text-align: left;
+    box-sizing: border-box;    /* Include padding in width calculation */
     background-color: #f8f9fa;
     padding: 15px;
     margin: 15px 0;
