--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,49 +5,71 @@ author_profile: true
 ---
 
 <div class="research-container">
-    
-    <div class="research-entry">
-        <div class="citation">
-            Xu, C., Ge, X. (2025). Reimagining Digital Well-being: A Theoretical Framework Based on the Psychology of Felt Structure and Illustrated through Creative Storytelling. <em>Proc. ACM Hum.-Comput. Interact.</em> 9, 7, Article CSCW 215 (November 2025), 19 pages. https://doi.org/10.1145/3757396 
-            <a href="files/newswood.pdf" target="_blank">PDF</a>
-        </div>
-        
-        <div class="abstract">
-            <strong>Abstract:</strong> Digital environments today often lack affordances that cultivate a sense of place and embodied being and acting. We develop a theoretical framework for embodied place-making based on people's psychological tendency to balance structure (clarity, predictability, and certainty) with unstructuredness (openness and possibility). This framework provides a unified theoretical foundation for examining continuity and discontinuity in social psychological processes and behaviors across digital, physical, and natural environments. We illustrate this framework through an original story (<em>NewsWood<em>) that reconceptualizes digital news reading as an experience akin to wandering through woods. We hope to inspire radical reimagining of how future digital environments can foster well-being across individuals, communities, societies, and the natural world within their interconnected relationships.
-        </div>
-    </div>
+
+As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural world. 
+  
+<h2>Research Interests</h2>
+
+<div class="content-section">
+My current work 
+  
+</div>
+
+<h2>Current Projects</h2>
+
+<div class="content-section">
+I am currently leading several research initiatives that 
+  
+</div>
+
+<h2>Approach</h2>
+
+<div class="content-section">
+Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.
+</div>
+
+<h2>Recent News</h2>
+
+<div class="content-section">
+[8/24/25] - I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025. 
+[8/20/25] - My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
+</div>
+  
+<h2>Background</h2>
+
+<div class="content-section">
+I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor Brian S. Lowery. Since then, I have been working with Professors Hazel Rose Markus and Jeanne L. Tsai on research related to culture, creativity and climate action. 
+</div>
 
 </div>
 
 <style>
 .research-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    max-width: none;           /* Remove max-width limit */
+    width: calc(100% - 20px);  /* Use full width minus small buffer */
+    margin: 0;                 /* Reset all margins */
+    margin-left: -30px;        /* Fine-tuned left shift */
+    margin-right: -140px;      /* Extend into right margin */
+    padding: 20px 40px;        /* Horizontal padding for readability */
+    font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
+    text-align: left;
+    box-sizing: border-box;    /* Include padding in width calculation */
 }
-
-.research-entry {
-    margin-bottom: 30px;
-}
-
-.citation {
-    font-size: 16px;
-    margin-bottom: 15px;
-}
-
-.citation a {
-    color: #007bff;
-    text-decoration: none;
-    margin-left: 5px;
-}
-
-.citation a:hover {
-    text-decoration: underline;
-}
-
-.abstract {
+  
+.content-section {
+    max-width: none;           /* Remove max-width limit */
+    width: calc(100% - 20px);  /* Use full width minus small buffer */
+    margin: 0;                 /* Reset all margins */
+    margin-left: -30px;        /* Fine-tuned left shift */
+    margin-right: -140px;      /* Extend into right margin */
+    padding: 20px 40px;        /* Horizontal padding for readability */
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    line-height: 1.6;
+    text-align: left;
+    box-sizing: border-box;    /* Include padding in width calculation */
     background-color: #f8f9fa;
     padding: 15px;
     margin: 15px 0;
@@ -66,7 +88,7 @@ h2 {
     color: #495057;
     margin-top: 40px;
     margin-bottom: 20px;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 500;
 }
 </style>
