--- a/_pages/about.html
+++ b/_pages/about.html
@@ -33,8 +33,10 @@ Methodologically, I pursue a mode of inquiry that is both empirical and imaginat
 <h2>Recent News</h2>
 
 <div class="content-section">
-[8/24/25] - I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025. 
-[8/20/25] - My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
+AUGUST,2025
+- I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025. 
+AUGUST,2025
+- My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
 </div>
   
 <h2>Background</h2>
@@ -82,7 +84,7 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
     padding: 15px;
     margin: 15px 0;
     font-size: 14px;
-    text-align: justify;
+    text-align: left;
 }
 
 .contact-note {
