--- a/_pages/research.html
+++ b/_pages/research.html
@@ -6,39 +6,20 @@ author_profile: true
 
 <div class="research-container">
 
-As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural world. 
+I am currently carrying out a few interrelated research projects, focusing on climate action, creativity, human-nature relations, and wellbeing.
   
-<h2>Research Interests</h2>
+<h2>CULTURALLY ATTUNED CLIMATE ACTION</h2>
 
 <div class="content-section">
 My current work 
   
 </div>
 
-<h2>Current Projects</h2>
+<h2>CREATIVITY</h2>
 
 <div class="content-section">
-I am currently leading several research initiatives that 
+Coming up with good ideas to address everyday issues or societal and plantary challenges is crucial. 
   
-</div>
-
-<h2>Approach</h2>
-
-<div class="content-section">
-Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.
-</div>
-
-<h2>Recent News</h2>
-
-<div class="content-section">
-[8/24/25] - I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025. 
-[8/20/25] - My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
-</div>
-  
-<h2>Background</h2>
-
-<div class="content-section">
-I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor Brian S. Lowery. Since then, I have been working with Professors Hazel Rose Markus and Jeanne L. Tsai on research related to culture, creativity and climate action. 
 </div>
 
 </div>
@@ -74,7 +55,7 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
     padding: 15px;
     margin: 15px 0;
     font-size: 14px;
-    text-align: justify;
+    text-align: left;
 }
 
 hr {
