--- a/_pages/about.html
+++ b/_pages/about.html
@@ -9,25 +9,13 @@ redirect_from:
 <div class="about-container">
 
 As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural world. 
-  
-<h2>Research Interests</h2>
 
-<div class="content-section">
-My current work 
-  
-</div>
-
-<h2>Current Projects</h2>
-
-<div class="content-section">
-I am currently leading several research initiatives that 
-  
-</div>
-
-<h2>Approach</h2>
-
-<div class="content-section">
 Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.
+  
+<hr>
+
+<div class="contact-note">
+<em> Research interests: mechanisms of shared agency in collaborative climate action; cultural models of creativity; socio-ecological wellbeing </em>
 </div>
 
 <h2>Recent News</h2>
