--- a/_pages/about.html
+++ b/_pages/about.html
@@ -9,15 +9,17 @@ redirect_from:
 
 <div class="about-container">
 
-As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural world. 
+As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural worlds. 
 
 Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.
+
+  My recent research has been supported by the Sustainability Accelerator at Stanford Doerr School of Sustainability, and Stanford Institute for Human-Centered AI. 
 
 <div class="contact-note">
 <em> Research interests: mechanisms of shared agency in collaborative climate action; cultural models of creativity; socio-ecological wellbeing </em>
 </div>
 
-<h2>Recent News</h2>
+<h2>RECENT UPDATES</h2>
 
 <div class="content-section">
 AUGUST,2025
@@ -26,7 +28,7 @@ AUGUST,2025
 - My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
 </div>
   
-<h2>Background</h2>
+<h2>BACKGROUND</h2>
 
 <div class="content-section">
 I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor Brian S. Lowery. Since then, I have been working with Professors Hazel Rose Markus and Jeanne L. Tsai on research related to culture, creativity and climate action. 
