--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,7 +1,10 @@
 ---
 layout: archive
-permalink: /publications.html
+permalink: /
 author_profile: true
+redirect_from: 
+  - /publications/
+  - /publications.html
 ---
 
 <div class="publications-container">
