--- a/_pages/about.html
+++ b/_pages/about.html
@@ -31,7 +31,7 @@ AUGUST,2025
 <h2>BACKGROUND</h2>
 
 <div class="content-section">
-I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor Brian S. Lowery. Since then, I have been working with Professors Hazel Rose Markus and Jeanne L. Tsai on research related to culture, creativity and climate action. 
+I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor Brian S. Lowery. Since then, I have been working with Professors Hazel Rose Markus and Jeanne L. Tsai on research related to culture, creativity and climate action. Outside research, I also make poems, songs, and dance pieces usually together with my ukulele. 
 </div>
 
 </div>
