--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,7 +13,7 @@ As a behavioral scientist and cultural scholar, I explore how culture influences
 
 Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.
 
-  My recent research has been supported by the Sustainability Accelerator at Stanford Doerr School of Sustainability, and Stanford Institute for Human-Centered AI. 
+My recent research has been supported by the Sustainability Accelerator at the Stanford Doerr School of Sustainability, and Stanford Institute for Human-Centered AI. 
 
 <div class="contact-note">
 <em> Research interests: mechanisms of shared agency in collaborative climate action; cultural models of creativity; socio-ecological wellbeing </em>
