--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,10 +1,7 @@
 ---
 layout: archive
-permalink: /
+permalink: /publications.html
 author_profile: true
-redirect_from: 
-  - /publications/
-  - /publications.html
 ---
 
 <div class="publications-container">
