--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,4 +1,5 @@
 ---
+layout: archive
 permalink: /
 author_profile: true
 redirect_from: 
@@ -12,7 +13,9 @@ I am currently a postdoctoral researcher at the Department of Psychology at Stan
 
 Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.
 
-My recent research has been supported by the [Sustainability Accelerator at the Stanford Doerr School of Sustainability] (https://sustainability-accelerator.stanford.edu/), and [Stanford Institute for Human-Centered Artificial Intelligence] (https://hai.stanford.edu/). 
+<p>
+My recent research has been supported by <a href="https://sustainability-accelerator.stanford.edu/">the Sustainability Accelerator at the Stanford Doerr School of Sustainability</a>, and <a href="https://hai.stanford.edu/">Stanford Institute for Human-Centered Artificial Intelligence</a>. 
+</p>
 
 <div class="contact-note">
 <em> Research interests: mechanisms of shared agency in collaborative climate action; cultural models of creativity; socio-ecological wellbeing </em>
