--- a/_pages/about.html
+++ b/_pages/about.html
@@ -9,25 +9,26 @@ redirect_from:
 
 <div class="about-container">
 
-I am currently a postdoctoral researcher at the Department of Psychology at Stanford University. As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural worlds. 
+<p>I am currently a postdoctoral researcher at the Department of Psychology at Stanford University. As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural worlds.</p> 
 
-Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.
-
+<p>Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.</p>
+  
 <p>
 My recent research has been supported by <a href="https://sustainability-accelerator.stanford.edu/">the Sustainability Accelerator at the Stanford Doerr School of Sustainability</a>, and <a href="https://hai.stanford.edu/">Stanford Institute for Human-Centered Artificial Intelligence</a>. 
 </p>
 
 <div class="contact-note">
-<em> Research interests: mechanisms of shared agency in collaborative climate action; cultural models of creativity; socio-ecological wellbeing </em>
+<em> Research interests: shared agency in climate action, cultural models of creativity, socio-ecological wellbeing </em>
 </div>
 
 <h2>RECENT UPDATES</h2>
 
 <div class="content-section">
-AUGUST,2025
-- I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025. 
-AUGUST,2025
-- My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. 
+AUGUST,2025 <br><br>
+- I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025.<br><br>
+AUGUST,2025 <br><br>
+- My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. <br><br>
+  
 </div>
   
 <h2>BACKGROUND</h2>
@@ -57,13 +58,13 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
     background-color: #f8f9fa;
     padding: 15px;
     margin: 15px 0;
-    font-size: 14px;
+    font-size: 15px;
     text-align: left;
 }
 
 .contact-note {
     margin-top: 20px;
-    font-size: 13px;
+    font-size: 14px;
     color: #555;
 }
 
