--- a/_pages/about.html
+++ b/_pages/about.html
@@ -25,9 +25,9 @@ My recent research has been supported by <a href="https://sustainability-acceler
 
 <div class="content-section">
 AUGUST,2025 <br><br>
-- I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025.<br><br>
+I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025.<br><br>
 AUGUST,2025 <br><br>
-- My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. <br><br>
+My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. <br><br>
   
 </div>
   
@@ -58,7 +58,7 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
     background-color: #f8f9fa;
     padding: 15px;
     margin: 15px 0;
-    font-size: 15px;
+    font-size: 14px;
     text-align: left;
 }
 
@@ -79,7 +79,7 @@ h2 {
     color: #495057;
     margin-top: 40px;
     margin-bottom: 20px;
-    font-size: 1em;
+    font-size: 1.05em;
     font-weight: 500;
 }
 </style>
