--- a/_pages/about.html
+++ b/_pages/about.html
@@ -9,12 +9,16 @@ redirect_from:
 
 <div class="about-container">
 
-<p>I am currently a postdoctoral researcher at the Department of Psychology at Stanford University. As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural worlds.</p> 
+<p>I am currently a postdoctoral researcher at the Department of Psychology at Stanford University, working with Professors <a href="https://web.stanford.edu/~hazelm/">Hazel Rose Markus</a> and <a href="https://psychology.stanford.edu/people/jeanne-l-tsai/">Jeanne L. Tsai</a>. As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural worlds.</p> 
 
 <p>Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.</p>
   
 <p>
 My recent research has been supported by <a href="https://sustainability-accelerator.stanford.edu/">the Sustainability Accelerator at the Stanford Doerr School of Sustainability</a>, and <a href="https://hai.stanford.edu/">Stanford Institute for Human-Centered Artificial Intelligence</a>. 
+</p>
+
+<p>
+I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor <a href="https://www.gsb.stanford.edu/faculty-research/faculty/brian-lowery">Brian S. Lowery</a>. Outside research, I also make poems, songs, and dance pieces usually together with my ukulele. 
 </p>
 
 <div class="contact-note">
@@ -29,12 +33,6 @@ I will organized a roundtable session on identifying cultural defaults for clima
 AUGUST,2025 <br><br>
 My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. <br><br>
   
-</div>
-  
-<h2>BACKGROUND</h2>
-
-<div class="content-section">
-I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor Brian S. Lowery. Since then, I have been working with Professors Hazel Rose Markus and Jeanne L. Tsai on research related to culture, creativity and climate action. Outside research, I also make poems, songs, and dance pieces usually together with my ukulele. 
 </div>
 
 </div>
