--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,7 +11,7 @@ redirect_from:
 
 <p>I am currently a postdoctoral researcher at the Department of Psychology at Stanford University, working with Professors <a href="https://web.stanford.edu/~hazelm/">Hazel Rose Markus</a> and <a href="https://psychology.stanford.edu/people/jeanne-l-tsai/">Jeanne L. Tsai</a>. As a behavioral scientist and cultural scholar, I explore how culture influences our ability to live in just and caring relations—with one another and with the natural worlds.</p> 
 
-<p>Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my work, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I aim to build a science of meaning that enables collaboration across differences.</p>
+<p>Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my research, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I believe building a science of meaning holds great promise to enable understanding and collaboration across differences.</p>
   
 <p>
 My recent research has been supported by <a href="https://sustainability-accelerator.stanford.edu/">the Sustainability Accelerator at the Stanford Doerr School of Sustainability</a>, and <a href="https://hai.stanford.edu/">Stanford Institute for Human-Centered Artificial Intelligence</a>. 
@@ -28,10 +28,10 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
 <h2>RECENT UPDATES</h2>
 
 <div class="content-section">
-AUGUST,2025 <br><br>
-I will organized a roundtable session on identifying cultural defaults for climate adaptation at APS conference in October, 2025.<br><br>
-AUGUST,2025 <br><br>
-My project on identifying cultural defaults for climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. <br><br>
+AUGUST 2025 <br><br>
+I will organized a roundtable session on identifying cultural defaults for global climate adaptation at APS conference in October, 2025.<br><br>
+AUGUST 2025 <br><br>
+My project on identifying cultural defaults for global climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. <br><br>
   
 </div>
 
