--- a/_pages/about.html
+++ b/_pages/about.html
@@ -14,7 +14,7 @@ redirect_from:
 <p>Methodologically, I pursue a mode of inquiry that is both empirical and imaginative, elevating overlooked experiences, practices, and knowledge to foster possibilities of care and justice. I integrate surveys and experiments, cultural product analysis, fabulation, and participatory methods. Throughout my research, I approach “culture” as historically derived meaning frameworks and their enactments in individual psyches, interpersonal interactions, social practices, artifacts, and institutions. I believe building a science of meaning holds great promise to enable understanding and collaboration across differences.</p>
   
 <p>
-My recent research has been supported by <a href="https://sustainability-accelerator.stanford.edu/">the Sustainability Accelerator</a> at the Stanford Doerr School of Sustainability, and <a href="https://hai.stanford.edu/">Stanford Institute for Human-Centered Artificial Intelligence</a>. 
+My recent research has been supported by the <a href="https://sustainability-accelerator.stanford.edu/">Sustainability Accelerator</a> at the Stanford Doerr School of Sustainability, and <a href="https://hai.stanford.edu/">Stanford Institute for Human-Centered Artificial Intelligence</a>. 
 </p>
 
 <p>
