--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,1 +1,61 @@
+---
+layout: archive
+permalink: /CV.html
+author_profile: true
+---
 
+<div class="cv-container">
+
+<p>View my <a href="https://docs.google.com/document/d/1Fs4gtZlfEcUZZmzBFBlVFA0IJTXhagvDeV-uMnFxi1w/edit?usp=sharing" target="_blank">CV</a>.</p>
+  
+</div>
+
+<style>
+.cv-container {
+    max-width: none;           /* Remove max-width limit */
+    width: calc(100% - 20px);  /* Use full width minus small buffer */
+    margin: 0;                 /* Reset all margins */
+    margin-left: -30px;        /* Fine-tuned left shift */
+    margin-right: -140px;      /* Extend into right margin */
+    padding: 20px 40px;        /* Horizontal padding for readability */
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    line-height: 1.6;
+    text-align: left;
+    box-sizing: border-box;    /* Include padding in width calculation */
+}
+  
+.content-section {
+    max-width: none;           /* Remove max-width limit */
+    width: calc(100% - 20px);  /* Use full width minus small buffer */
+    margin: 0;                 /* Reset all margins */
+    margin-left: -30px;        /* Fine-tuned left shift */
+    margin-right: -140px;      /* Extend into right margin */
+    padding: 20px 40px;        /* Horizontal padding for readability */
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    line-height: 1.6;
+    text-align: left;
+    box-sizing: border-box;    /* Include padding in width calculation */
+    background-color: #f8f9fa;
+    padding: 15px;
+    margin: 15px 0;
+    font-size: 14px;
+    text-align: left;
+}
+
+hr {
+    border: none;
+    height: 1px;
+    background-color: #dee2e6;
+    margin: 30px 0;
+}
+
+h2 {
+    color: #495057;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size: 1em;
+    font-weight: 500;
+}
+</style>
