--- a/_pages/about.html
+++ b/_pages/about.html
@@ -29,7 +29,7 @@ I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Prov
 
 <div class="content-section">
 AUGUST 2025 <br><br>
-I will organized a roundtable session on identifying cultural defaults for global climate adaptation at APS conference in October, 2025.<br><br>
+I will organize a roundtable session on identifying cultural defaults for global climate adaptation at APS conference in October, 2025.<br><br>
 AUGUST 2025 <br><br>
 My project on identifying cultural defaults for global climate adaptation will be presented at Stanford Policy Day Conference in November, 2025. <br><br>
   
