--- a/_pages/about.html
+++ b/_pages/about.html
@@ -21,13 +21,13 @@ My recent research has been supported by the <a href="https://sustainability-acc
 I was born in a lovely small city with a lot of rivers and lakes in Jiangsu Province, China. I later came to the U.S. for graduate school. I received my Ph.D. from Stanford Graduate School of Business, where I was lucky to be advised by Professor <a href="https://www.gsb.stanford.edu/faculty-research/faculty/brian-lowery">Brian S. Lowery</a>. Outside research, I also make poems, songs, and dance pieces usually together with my ukulele. 
 </p>
 
-<div class="contact-note">
+<div class="smaller-note">
 <em> Research interests: shared agency in climate action, cultural models of creativity, socio-ecological wellbeing </em>
 </div>
 
 <h2>RECENT UPDATES</h2>
 
-<div class="content-section">
+<div class="smaller-note">
 AUGUST 2025 <br><br>
 I will organize a roundtable session on identifying cultural defaults for global climate adaptation at APS conference in October, 2025.<br><br>
 AUGUST 2025 <br><br>
@@ -60,7 +60,7 @@ My project on identifying cultural defaults for global climate adaptation will b
     text-align: left;
 }
 
-.contact-note {
+.smaller-note {
     margin-top: 20px;
     font-size: 14px;
     color: #555;
