--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -6,7 +6,7 @@ author_profile: true
 
 <div class="cv-container">
 
-/*<p>View my <a href="https://docs.google.com/document/d/1Fs4gtZlfEcUZZmzBFBlVFA0IJTXhagvDeV-uMnFxi1w/edit?usp=sharing" target="_blank">CV</a>.</p>*/
+*/<p>View my <a href="https://docs.google.com/document/d/1Fs4gtZlfEcUZZmzBFBlVFA0IJTXhagvDeV-uMnFxi1w/edit?usp=sharing" target="_blank">CV</a>.</p>/*
   
 </div>
 
